--- a/XY-C1.config
+++ b/XY-C1.config
@@ -1,64 +1,123 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaoyu_xy-c5=y
-CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=4
-CONFIG_TARGET_ROOTFS_INITRAMFS=n
-CONFIG_KERNEL_DEBUG_INFO=n
-CONFIG_KERNEL_DEBUG_KERNEL=n
-CONFIG_KERNEL_MEMCG_SWAP=n
-CONFIG_KERNEL_SWAP=n
+
+# CONFIG_SIGNATURE_CHECK is not set
+# CONFIG_SIGNED_PACKAGES is not set
+
 CONFIG_KERNEL_BUILD_DOMAIN="GitHub Actions"
-CONFIG_KERNEL_BUILD_USER="LjzKirito"
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_KERNEL_BUILD_USER="hbyhzx"
+
+# IPv6 支持
+CONFIG_IPV6=n
+CONFIG_KERNEL_IPV6=n
 CONFIG_PACKAGE_ipv6helper=n
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-mod-nat=y
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_luci-app-autoreboot=n
-CONFIG_PACKAGE_luci-app-nlbwmon=n
-CONFIG_PACKAGE_nlbwmon=n
-CONFIG_PACKAGE_luci-app-sqm=n
-CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_PACKAGE_UnblockNeteaseMusicGo=y
-CONFIG_UnblockNeteaseMusic_NodeJS=n
-CONFIG_UnblockNeteaseMusic_Go=y
-CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=n
+CONFIG_PACKAGE_6in4=n
+CONFIG_PACKAGE_6rd=n
+CONFIG_PACKAGE_6to4=n
+
+# USB 相关
+CONFIG_PACKAGE_automount=y
+CONFIG_PACKAGE_e2fsprogs=y
+CONFIG_PACKAGE_smartmontools=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-app-usb-printer=y
+
+## USB 网络共享
+CONFIG_PACKAGE_kmod-usb-net=n
+CONFIG_PACKAGE_kmod-usb-net-asix=n
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=n
+CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=n
+CONFIG_PACKAGE_kmod-usb-net-hso=n
+CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=n
+CONFIG_PACKAGE_kmod-usb-net-ipheth=n
+CONFIG_PACKAGE_kmod-usb-net-rndis=n
+CONFIG_PACKAGE_libudev-fbsd=n
+CONFIG_PACKAGE_usbutils=n
+
+## USB 网络存储
+CONFIG_PACKAGE_autosamba=y
+CONFIG_PACKAGE_luci-app-samba=y
+CONFIG_PACKAGE_luci-app-vsftpd=y
+
+# LUCI Appliciations
+
 CONFIG_PACKAGE_luci-app-accesscontrol=n
+CONFIG_PACKAGE_luci-app-argon-config=n
+CONFIG_PACKAGE_luci-app-adbyby-plus=n
+CONFIG_PACKAGE_luci-app-adguardhome=n
+CONFIG_PACKAGE_luci-app-autoupdate=y
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+CONFIG_PACKAGE_luci-app-ddns=n
+CONFIG_PACKAGE_ddns-scripts_aliyun=n
+CONFIG_PACKAGE_ddns-scripts_dnspod=n
+CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=n
+CONFIG_PACKAGE_ddns-scripts_no-ip_com=n
+CONFIG_PACKAGE_luci-app-eqos=n
 CONFIG_PACKAGE_luci-app-filetransfer=n
 CONFIG_PACKAGE_luci-app-frpc=n
-CONFIG_PACKAGE_luci-app-vsftpd=n
-CONFIG_PACKAGE_luci-app-ramfree=y
-CONFIG_PACKAGE_luci-app-samba4=n
-CONFIG_PACKAGE_luci-app-vlmcsd=n
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
+CONFIG_PACKAGE_luci-app-iperf3-server=n
+# CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
+CONFIG_PACKAGE_luci-app-mwan3=n
+CONFIG_PACKAGE_luci-app-mwan3helper=n
+CONFIG_PACKAGE_luci-app-nlbwmon=n
+CONFIG_PACKAGE_luci-app-onliner=n
+CONFIG_PACKAGE_luci-app-pptp-server=n
+# CONFIG_PACKAGE_luci-app-rclone is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_fuse-utils is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
+# CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
+CONFIG_PACKAGE_luci-app-ssr-plus=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Client=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_Libev_Server=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=n
+CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=n
+CONFIG_PACKAGE_luci-app-serverchan=n
+CONFIG_PACKAGE_luci-app-sqm=n
+CONFIG_PACKAGE_luci-app-syncdial=n
+CONFIG_PACKAGE_luci-app-smartdns=n
+CONFIG_PACKAGE_luci-app-socat=n
+CONFIG_SOCAT_SSL=n
+CONFIG_PACKAGE_luci-app-ttyd=n
+CONFIG_PACKAGE_luci-app-turboacc=n
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=n
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE_DRV is not set
+# CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_SHORTCUT_FE is not set
+CONFIG_PACKAGE_luci-app-udpxy=n
+CONFIG_PACKAGE_luci-app-uhttpd=y
+CONFIG_PACKAGE_luci-app-upnp=n
+CONFIG_PACKAGE_luci-app-unblockmusic=n
+CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=n
+# CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_NodeJS is not set
+CONFIG_PACKAGE_luci-app-webadmin=y
+CONFIG_PACKAGE_luci-app-webd=n
+CONFIG_PACKAGE_luci-app-wol=n
+CONFIG_PACKAGE_luci-app-wireguard=n
+CONFIG_PACKAGE_luci-app-zerotier=n
+
+CONFIG_PACKAGE_luci-ssl-openssl=n
+
+# 主题包
 CONFIG_PACKAGE_luci-theme-argon=y
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray_plugin=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=n
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Server=n
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_kcptun=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_haproxy=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=n
-CONFIG_XRAY_COMPRESS_UPX=n
-CONFIG_XRAY_EXCLUDE_ASSETS=y
-CONFIG_XRAY_COMPATIBILITY_MODE=n
+
+# Other Appliciations
+CONFIG_PACKAGE_bash=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_davfs2=n
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_iperf3=n
+CONFIG_PACKAGE_ipt2socks=n
+CONFIG_PACKAGE_jq=y
+CONFIG_PACKAGE_lsblk=n
+CONFIG_PACKAGE_ppp-mod-pptp=n
+CONFIG_PACKAGE_ppp-mod-pppol2tp=n
+CONFIG_PACKAGE_wpad-openssl=n
+CONFIG_PACKAGE_wget-ssl=y
+CONFIG_PACKAGE_xray-geodata=n
+CONFIG_PACKAGE_xz=n
+CONFIG_PACKAGE_xz-utils=n
+CONFIG_PACKAGE_xl2tpd=n
