--- a/XY-C1.config
+++ b/XY-C1.config
@@ -9,13 +9,13 @@ CONFIG_KERNEL_BUILD_DOMAIN="GitHub Actions"
 CONFIG_KERNEL_BUILD_USER="hbyhzx"
 
 # IPv6 支持
-CONFIG_IPV6=n
-CONFIG_KERNEL_IPV6=n
-CONFIG_PACKAGE_ipv6helper=n
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=n
-CONFIG_PACKAGE_6in4=n
-CONFIG_PACKAGE_6rd=n
-CONFIG_PACKAGE_6to4=n
+CONFIG_IPV6=y
+CONFIG_KERNEL_IPV6=y
+CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_6in4=y
+CONFIG_PACKAGE_6rd=y
+CONFIG_PACKAGE_6to4=y
 
 # USB 相关
 CONFIG_PACKAGE_automount=y
